Fixed Stylin' link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <h1 class="page-header">Lonny Le</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="https://lonnybear.github.io/stylin-with-css-fl22/ target="_blank">Stylin' with CSS</a>
+            <a href="https://lonnybear.github.io/stylin-with-css-fl22/" target="_blank">Stylin' with CSS</a>
             <a href="https://docs.google.com/document/d/1qKhndY_g6tGo8LNBRBD3P_4tAT3-pmkA7xgMwftgXTc/edit?usp=sharing" target="_blank">Staging Area</Area></a>
             <a href="https://github.com/lonnybear" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/lonny-l-ba8527241/" target="_blank">LinkedIn</a>
