added the positioning webpage link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
             <a href="https://lonnybear.github.io/stylin-with-css-fl22/" target="_blank">Stylin' with CSS</a>
-            <a href="https://docs.google.com/document/d/1qKhndY_g6tGo8LNBRBD3P_4tAT3-pmkA7xgMwftgXTc/edit?usp=sharing" target="_blank">Staging Area</Area></a>
+            <a href="https://lonnybear.github.io/positioning-it116-fl22/" target="_blank">Positioning</Area></a>
             <a href="https://github.com/lonnybear" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/lonny-l-ba8527241/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
