added in time of day project

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="https://lonnybear.github.io/stylin-with-css-fl22/" target="_blank">Stylin' with CSS</a>
             <a href="https://lonnybear.github.io/positioning-it116-fl22/" target="_blank">Positioning</Area></a>
+            <a href="https://lonnybear.github.io/time-of-day/" target ="_blank">Time of Day</Area></a>
             <a href="https://github.com/lonnybear" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/lonny-l-ba8527241/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
