added in daily grind as link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="https://lonnybear.github.io/stylin-with-css-fl22/" target="_blank">Stylin' with CSS</a>
             <a href="https://lonnybear.github.io/positioning-it116-fl22/" target="_blank">Positioning</Area></a>
             <a href="https://lonnybear.github.io/time-of-day/" target ="_blank">Time of Day</Area></a>
+            <a href="https://lonnybear.github.io/daily-grind/" target ="_blank">Daily Grind</Area></a>
             <a href="https://github.com/lonnybear" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/lonny-l-ba8527241/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
@@ -33,7 +34,10 @@
        
         <p>Hello! My name is Lonny Le, and I am a current Year Up and Seattle Central student, studying in the Software App Development track.</p>
 
-        <p>Currently, I am an Amazon flex associate at an Amazon Return store, where I work primarily on customer servicing, inventory, and troubleshooting for those that need help. With my past few years of work-related experiences, I have gained a lot in customer servicing and how to assist those in any situation to make them relaxed and comfortable. Right now, I have dreams of wanting to develop software that will benefit those to make them eased as well. I will be able to do that by becoming a software engineer, with my foot already being in the door through the Year Up program, with all that I am currently learning. With my perseverance and dedication, I can be someone that can be relied upon in any circumstances.</p>
+        <p>Currently, I am an Amazon flex associate at an Amazon Return store, where I work primarily on customer servicing, inventory, and troubleshooting for those that need help.</p>
+        <p>With my past few years of work-related experiences, I have gained a lot in customer servicing and how to assist those in any situation to make them relaxed and comfortable.</p>
+        <p>Right now, I have dreams of wanting to develop software that will benefit those to make them eased as well. I will be able to do that by becoming a software engineer, with my foot already being in the door through the Year Up program, with all that I am currently learning. 
+        <p>With my perseverance and dedication, I can be someone that can be relied upon in any circumstances.</p>
 
         <p>Feel free to check out my progress through my staging area, my projects, and my media to reach me listed up above in the navigation!</p>
 
