--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="https://lonnybear.github.io/positioning-it116-fl22/" target="_blank">Positioning</Area></a>
             <a href="https://lonnybear.github.io/time-of-day/" target ="_blank">Time of Day</Area></a>
             <a href="https://lonnybear.github.io/daily-grind/" target ="_blank">Daily Grind</Area></a>
+            <a href="https://lonnybear.github.io/dom-play/" target ="_blank">DOM Play</Area></a>
             <a href="https://github.com/lonnybear" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/lonny-l-ba8527241/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
