--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="https://lonnybear.github.io/daily-grind/" target ="_blank">Daily Grind</Area></a>
             <a href="https://lonnybear.github.io/dom-play/" target ="_blank">DOM Play</Area></a>
             <a href="https://lonnybear.github.io/guess-the-number/" target ="_blank">Guess The Number</Area></a>
+            <a href="https://lonnybear.github.io/form-template/" target ="_blank">Form Template</Area></a>
             <a href="https://github.com/lonnybear" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/lonny-l-ba8527241/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
