--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="https://lonnybear.github.io/dom-play/" target ="_blank">DOM Play</Area></a>
             <a href="https://lonnybear.github.io/guess-the-number/" target ="_blank">Guess The Number</Area></a>
             <a href="https://lonnybear.github.io/form-template/" target ="_blank">Form Template</Area></a>
+            <a href="https://lonnybear.github.io/data-processing/" target ="_blank">Data Processing</Area></a>
             <a href="https://github.com/lonnybear" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/lonny-l-ba8527241/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
