--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="https://ajax-random-quotes.lonnybear.repl.co" target ="_blank">Ajax Quotes Generator</Area></a>
             <a href="https://pet-adoption-agency.lonnybear.repl.co/" target ="_blank">Pet Adoption Agency</Area></a>
             <a href="https://templating-with-ejs.lonnybear.repl.co/" target ="_blank">Node/Express/EJS</Area></a>
-            <a href="https://replit.com/@lonnybear/painting-web-service" target ="_blank">Painting Web Service</Area></a>
+            <a href="https://painting-web-service.lonnybear.repl.co" target ="_blank">Painting Web Service</Area></a>
             <a href="https://github.com/lonnybear" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/lonny-l-ba8527241/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
